unpackaged/main/default/objects/ERS_Work_Type_to_Product_Mapping__mdt/ERS_Work_Type_to_Product_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>ERS Work Type to Product Mapping</label>
    <pluralLabel>ERS_Work_Type_To_Product_Mappings</pluralLabel>
</CustomObject>