unpackaged/main/default/objects/ERS_Work_Type_to_Product_Mapping__mdt/fields/Automatic_Manual__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Manual__c</fullName>
    <label>Automatic/Manual</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>