unpackaged/main/default/objects/ERS_Work_Type_to_Product_Mapping__mdt/fields/ERS_Is_Holiday_Product__c.field-meta.xml
<CustomField>
    <fullName>ERS_Is_Holiday_Product__c</fullName>
    <label>Is Holiday Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>