unpackaged/main/default/objects/ERS_Work_Type_to_Product_Mapping__mdt/fields/ERS_Is_Rap_Product__c.field-meta.xml
<CustomField>
    <fullName>ERS_Is_Rap_Product__c</fullName>
    <label>Is Rap Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>