unpackaged/main/default/objects/ERS_Work_Type_to_Product_Mapping__mdt/fields/ERS_Product__c.field-meta.xml
<CustomField>
    <fullName>ERS_Product__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>