unpackaged/main/default/objects/ERS_Work_Type_to_Product_Mapping__mdt/fields/ERS_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>ERS_Work_Type__c</fullName>
    <label>Work Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>