unpackaged/main/default/objects/ERS_Work_Type_to_Product_Mapping__mdt/fields/Reg_LargeRV__c.field-meta.xml
<CustomField>
    <fullName>Reg_LargeRV__c</fullName>
    <label>Reg/LargeRV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>